# hnpdf

./: .gitignore  Cargo.toml  Readme.md
res/: schema.sql
src/: background.rs  client.rs  main.rs  routes.rs  store.rs
src/client/: hn.rs  mod.rs  types.rs
templates/: head.html.tera  home.html.tera  search.html.tera  single.html.tera
