[package]
name = "hnpdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rusqlite = "0.28.0"
envconfig = "0.10.0"
html-escape = "0.2.12"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0", features=["derive"]}
serde_json = {version="1.0"}
regex = "1.7.0"